WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259629
VO interacts with the element containing the app selection instead of with VO's current element.
https://bugs.webkit.org/show_bug.cgi?id=259629
Summary
VO interacts with the element containing the app selection instead of with VO...
Andres Gonzalez
Reported
2023-07-29 10:35:14 PDT
Caused by AXTextMarkerRangeForUnorderedTextMarkersAttribute.
Attachments
Patch
(14.46 KB, patch)
2023-07-29 10:58 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(15.27 KB, patch)
2023-07-29 14:03 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-29 10:35:23 PDT
<
rdar://problem/113082300
>
Andres Gonzalez
Comment 2
2023-07-29 10:58:26 PDT
Created
attachment 467155
[details]
Patch
Andres Gonzalez
Comment 3
2023-07-29 11:00:43 PDT
rdar://112193520
Andres Gonzalez
Comment 4
2023-07-29 14:03:01 PDT
Created
attachment 467156
[details]
Patch Skip in wk1
EWS
Comment 5
2023-07-29 15:21:17 PDT
Committed
266417@main
(52903644b8d3): <
https://commits.webkit.org/266417@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467156
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug