Cherry-pick 52903644b8d3. rdar://problem/112193520

VO interacts with the element containing the app selection instead of with VO's current element.
    https://bugs.webkit.org/show_bug.cgi?id=259629
    rdar://112193520

    Reviewed by Chris Fleizach.

    VoiceOver uses the AXTextMarkerRangeForUnorderedTextMarkersAttribute to decide which element to interact with when the user presses VO Shift Down Arrow. This API failed when one of the TextMarker parameters was created off the main thread and thus has a null Node*. This patch fixes the issue by having a single implementation for both AXTextMarkerRangeForUnorderedTextMarkers and AXTextMarkerRangeForTextMarkers that supports unordered TextMarkers.

    Added WTR::AccessibilityUIElement::textMarkerRangeForUnorderedMarkers and a test case for this API.

    * LayoutTests/accessibility/text-marker/text-marker-range-with-unordered-markers-expected.txt:
    * LayoutTests/accessibility/text-marker/text-marker-range-with-unordered-markers.html:
    * LayoutTests/platform/glib/accessibility/text-marker/text-marker-range-with-unordered-markers-expected.txt: Added.
    * LayoutTests/platform/ios/accessibility/text-marker/text-marker-range-with-unordered-markers-expected.txt: Added.
    * LayoutTests/platform/mac-wk1/TestExpectations:
    * Source/WebCore/accessibility/AXTextMarker.cpp:
    (WebCore::partialOrder):
    * Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
    (-[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):
    * Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
    (WTR::AccessibilityUIElement::textMarkerRangeForUnorderedMarkers):
    * Tools/WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
    * Tools/WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
    * Tools/WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
    (WTR::AccessibilityUIElement::textMarkerRangeForUnorderedMarkers):

    Canonical link: https://commits.webkit.org/266417@main

Identifier: 265870.257@safari-7616.1.27-branch